force-app/main/default/objects/aecm__Solution_Design__c/aecm__Solution_Design__c.object-meta.xml
<CustomObject>
    <description>Container for Tempest solution information, details, and collaborations. Can be related to one or more pain points and solution stories..</description>
    <label>Solution Design</label>
    <nameField>
        <label>Solution Design Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Designs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>