force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Approximate_Solution_Cost__c.field-meta.xml
<CustomField>
    <fullName>aecm__Approximate_Solution_Cost__c</fullName>
    <inlineHelpText>Cost is calculated at 1USD if blank or less than or equal to 0</inlineHelpText>
    <label>Approximate Solution Cost</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>