force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Approximate_Solution_Value__c.field-meta.xml
<CustomField>
    <fullName>aecm__Approximate_Solution_Value__c</fullName>
    <inlineHelpText>Enter increased business value or value of decreased capability cost</inlineHelpText>
    <label>Approximate Solution Value</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>