force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Assumptions__c.field-meta.xml
<CustomField>
    <fullName>aecm__Assumptions__c</fullName>
    <label>Assumptions</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>