force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Business_Value__c.field-meta.xml
<CustomField>
    <fullName>aecm__Business_Value__c</fullName>
    <formula>aecm__Capability__r.aecm__Business_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Read only current state of the related capability field &quot;Business Value&quot;</inlineHelpText>
    <label>Business Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>