force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Capability__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For forecasting use only. Value in this field will be used when generating Pain Point Solutions.</inlineHelpText>
    <label>Capability</label>
    <referenceTo>aecm__Capability__c</referenceTo>
    <relationshipLabel>Solution Designs</relationshipLabel>
    <relationshipName>Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>