force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Capability_Effort_Cost__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Effort_Cost__c</fullName>
    <formula>aecm__Capability__r.aecm__Capability_Effort_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Read only current state of the related capability field &quot;Capability Effort Cost&quot;</inlineHelpText>
    <label>Capability Effort Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>