force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Capability_Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Overall_Score__c</fullName>
    <formula>aecm__Capability__r.aecm__Overall_Score__c</formula>
    <inlineHelpText>Read only current state of the related capability field &quot;Overall Score&quot;</inlineHelpText>
    <label>Capability Overall Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>