force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Capability_Resources__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Resources__c</fullName>
    <formula>aecm__Capability__r.aecm__Capability_Resources__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Read only current state of the related capability field &quot;Capability Resources&quot;</inlineHelpText>
    <label>Capability Resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>