force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Created__c.field-meta.xml
<CustomField>
    <fullName>aecm__Created__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Created</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>