force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Diagram_URL__c.field-meta.xml
<CustomField>
    <fullName>aecm__Diagram_URL__c</fullName>
    <inlineHelpText>Enter a link to a web based diagram, i.e. LucidCharts.</inlineHelpText>
    <label>Diagram URL</label>
    <type>Url</type>
</CustomField>