force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Estimated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>aecm__Estimated_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Estimated Start Date</label>
    <type>Date</type>
</CustomField>