force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Forecasted_IRR__c.field-meta.xml
<CustomField>
    <fullName>aecm__Forecasted_IRR__c</fullName>
    <label>Forecasted IRR</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>