force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Program_Project__c.field-meta.xml
<CustomField>
    <fullName>aecm__Program_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For forecasting use only. Value in this field will be used when generating Pain Point Solutions.</inlineHelpText>
    <label>Program Project</label>
    <referenceTo>aecm__Program_Project__c</referenceTo>
    <relationshipLabel>Solution Designs</relationshipLabel>
    <relationshipName>Solution_Designs</relationshipName>
    <type>Lookup</type>
</CustomField>