force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Related_Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>aecm__Related_Pain_Points__c</fullName>
    <label># Related Pain Points</label>
    <summaryForeignKey>aecm__Pain_Point_Solutions__c.aecm__Solution_Design__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>