force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__ROI_Cycles_for_this_Investment__c.field-meta.xml
<CustomField>
    <fullName>aecm__ROI_Cycles_for_this_Investment__c</fullName>
    <inlineHelpText>Enter the # of fiscal cycles to be used for this calculation, ie: years</inlineHelpText>
    <label>ROI Cycles for this Investment (in Yrs)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>