force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Solution_Architect__c.field-meta.xml
<CustomField>
    <fullName>aecm__Solution_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Designs1</relationshipName>
    <type>Lookup</type>
</CustomField>