force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Solution_Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>aecm__Solution_Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Designs</relationshipName>
    <type>Lookup</type>
</CustomField>