force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>aecm__Solution_Type__c</fullName>
    <label>Solution Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Design &amp; Architecture</fullName>
            </value>
            <value>
                <fullName>Re-design</fullName>
            </value>
            <value>
                <fullName>Stop Gap</fullName>
            </value>
            <value>
                <fullName>Work Around</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>