force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Technical_Architect__c.field-meta.xml
<CustomField>
    <fullName>aecm__Technical_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Designs2</relationshipName>
    <type>Lookup</type>
</CustomField>