force-app/main/default/objects/aecm__Solution_Design__c/fields/aecm__Value_Realized_in_Cycle__c.field-meta.xml
<CustomField>
    <fullName>aecm__Value_Realized_in_Cycle__c</fullName>
    <label>Value Realized in Cycle (in Yrs)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>