force-app/main/default/objects/aecm__Solution_Design__c/listViews/aecm__All.listView-meta.xml
<ListView>
    <fullName>aecm__All</fullName>
    <columns>NAME</columns>
    <columns>aecm__Capability__c</columns>
    <columns>aecm__Solution_Type__c</columns>
    <columns>aecm__Status__c</columns>
    <columns>aecm__Technical_Architect__c</columns>
    <columns>aecm__Program_Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Solution Designs</label>
</ListView>