force-app/main/default/objects/aecm__Solution_Design__c/listViews/aecm__Kanban_By_Status.listView-meta.xml
<ListView>
    <fullName>aecm__Kanban_By_Status</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Solutions by Status (Kanban)</label>
</ListView>